# llmring-server

./: CHANGELOG.md  Dockerfile.dev  PHASE6_SUMMARY.md  PHASE7.5_COMPLETE.md  PHASE7.5_SUMMARY.md  README.md  REFACTORING_REQUEST.md  docker-compose.dev.yml  pyproject.toml
docs/: api.md  database-management.md  dual-mode-refactoring.md
migrations/: 002_mcp.sql
scripts/: dev-server.sh
src/llmring_server/: __init__.py  cli.py  config.py  database.py  dependencies.py  main.py  service.py
src/llmring_server/migrations/: 001_complete.sql  001_initial.sql  002_profiles_and_receipts.sql  002_templates.sql  003_mcp.sql  004_remove_receipts.sql  __init__.py
src/llmring_server/models/: __init__.py  aliases.py  conversations.py  mcp.py  receipts.py  registry.py  templates.py  usage.py
src/llmring_server/routers/: __init__.py  aliases.py  conversations.py  mcp.py  receipts.py  registry.py  templates.py  usage.py
src/llmring_server/services/: __init__.py  aliases.py  conversations.py  mcp_service.py  receipts.py  registry.py  templates.py  usage.py
src/llmring_server/utils/: __init__.py  auth_helpers.py
tests/: conftest.py  test_aliases.py  test_auth_context.py  test_conversations.py  test_cost_calculation_accuracy.py  test_dual_mode.py  test_mcp.py  test_phase75_ondemand_receipts.py  test_receipts_phase7.py  test_registry.py  test_security_and_registry_v35.py  test_usage.py
